<resources>
    <string name="app_name">Calculator App</string>

    <string name="result">result</string>
    <string name="values">display</string>
    <string name="C">C</string>
    <string name="nine">9</string>
    <string name="eigth">8</string>
    <string name="seven">7</string>
    <string name="divide">/</string>
    <string name="mul">*</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="equal">=</string>
    <string name="onClick">onClick</string>
</resources>